--- a/fullpage.html
+++ b/fullpage.html
@@ -4,58 +4,112 @@
     <meta charset="UTF-8">
     <title>Full Page</title>
     <style type="text/css">
-        *{
+        * {
             padding: 0;
             margin: 0;
         }
-        html,body{
+
+        html, body {
             height: 100%;
             /*去除滚动条*/
-            /*overflow: hidden;*/
+            overflow: hidden;
         }
-        #container,.sections,.section{
+
+        #container, .sections, .section {
             height: 100%;
+            position: relative;
         }
-        #section0,#section1,#section2,#section3{
+
+        #section0, #section1, #section2, #section3 {
             background-color: #000;
             background-size: cover;
             background-position: 50% 50%;
             text-align: center;
             color: white;
         }
+
         #section0 {
             background-image: url("images/1.jpg");
         }
-        #section1{
+
+        #section1 {
             background-image: url("images/2.jpg");
         }
-        #section2{
+
+        #section2 {
             background-image: url("images/3.jpg");
         }
-        #section3{
+
+        #section3 {
             background-image: url("images/4.jpg");
         }
-        .left{
+
+        .left {
             float: left;
-            width: 25%;
+
+        }
+        h1{
+            font-size: 6em;
+            font-weight: normal;
+        }
+        /*显示分页小圆点的css样式*/
+        .pages{
+            position:fixed;
+            list-style: none;
+        }
+        .vertical.pages{
+            right: 10px;
+            top: 50%;
+        }
+        .horizontal.pages{
+            left: 50%;
+            bottom: 10px;
+        }
+        .pages li{
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            background: #fff;
+            margin: 10px 5px;
+            cursor: pointer;
+        }
+        .horizontal.pages li{
+            display: inline-block;
+            vertical-align: middle;
+        }
+        .pages li.active{
+            width: 14px;
+            height: 14px;
+            border: 2px solid #FFFE00;
+            background: none;
+            margin-left: 0;
         }
     </style>
 </head>
 <body>
-<div id="container" style="width: 400%" data-PageSwitch>
+<div id="container" data-PageSwitch>
     <div class="sections">
-        <div class="section left" id="section0"><h3>this is a page</h3></div>
-        <div class="section left" id="section1"><h3>this is a page</h3></div>
-        <div class="section left" id="section2"><h3>this is a page</h3></div>
-        <div class="section left" id="section3"><h3>this is a page</h3></div>
+        <div class="section active" id="section0">
+            <h1>this is a page</h1>
+        </div>
+        <div class="section" id="section1">
+            <h1>this is a page</h1>
+        </div>
+        <div class="section" id="section2">
+            <h1>this is a page</h1>
+        </div>
+        <div class="section" id="section3">
+            <h1>this is a page</h1>
+        </div>
     </div>
 </div>
-<script type="text/javascript">
-    $("#container").PageSwitch({
-        dirction:"herizontal"
-    });
+<script type="text/javascript" src="jquery-1.11.2.min.js"></script>
+<script type="text/javascript" src="pageswitch.js"></script>
+<!-- $("#container").PageSwitch({
+      direction:"herizontal"
+  });
 
-    $("#container").PageSwitch("init");
-</script>
+  $("#container").PageSwitch("init");
+</script>-->
 </body>
 </html>
